--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>My first web repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime quaerat modi molestiae corrupti facilis dicta. A odit quod voluptatum doloremque labore optio tenetur dolore animi commodi! Tempore, officiis commodi?</p>
+    </div>
 </body>
 </html>
