--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime quaerat modi molestiae corrupti facilis dicta. A odit quod voluptatum doloremque labore optio tenetur dolore animi commodi! Tempore, officiis commodi?</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime quaerat modi molestiae corrupti facilis dicta. A odit quod voluptatum doloremque labore optio tenetur dolore animi commodi! Tempore, officiis commodi?</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime quaerat modi molestiae corrupti facilis dicta. A odit quod voluptatum doloremque labore optio tenetur dolore animi commodi! Tempore, officiis commodi?</p>
     </div>
