added some rules for push github

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime quaerat modi molestiae corrupti facilis dicta. A odit quod voluptatum doloremque labore optio tenetur dolore animi commodi! Tempore, officiis commodi?</p>
     </div>
+    <div>
+        <h3>How To Push Incremental</h3>
+        <ul>
+            <li>git add.</li>
+            <li>git commit -m"here write some meaningful text about your added code</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
